--- a/config/base-config.conf
+++ b/config/base-config.conf
@@ -1,6 +1,6 @@
 kafka {
-  broker-servers = "localhost:9092"
-  zookeeper = "localhost:2181"
+  broker-servers = "10.0.0.5:9092"
+  zookeeper = "10.0.0.5:2181"
   producer {
     max-request-size = 1572864
   }
@@ -8,6 +8,7 @@ kafka {
 
 job {
   env = "local"
+  # set to false so that flink does not connect to state backend
   enable.distributed.checkpointing = false
   statebackend {
     blob {
@@ -17,6 +18,7 @@ job {
         checkpointing.dir = "flink-jobs"
       }
     }
+
     base.url = "wasbs://"${job.statebackend.blob.storage.container}"@"${job.statebackend.blob.storage.account}"/"${job.statebackend.blob.storage.checkpointing.dir}
   }
 }
@@ -32,15 +34,16 @@ task {
 redisdb.connection.timeout = 30000
 
 redis {
-  host = localhost
+  host = 10.0.0.6
   port = 6379
 }
 
 redis-meta {
-  host = localhost
+  host = 10.0.0.6
   port = 6379
 }
 
+# we'll see about these later
 postgres {
   host = localhost
   port = 5430
