--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
         -Dparallelism.default=1
         -Dblob.server.port=6124
         -Dqueryable-state.server.ports=6125
-        -Dconfig.file.path=/conf/telemetry-extractor-comb.conf
+        -Djobmanager.flink.memory.size=512m
+        --config.file.path /config/telemetry-extractor.conf
 
   taskmanager-te:
     build: .
@@ -23,5 +24,6 @@ services:
         /opt/flink/bin/taskmanager.sh start-foreground
         -Djobmanager.rpc.address=jobmanager-te
         -Dtaskmanager.rpc.port=6122
-        -Dconfig.file.path=/conf/telemetry-extractor-comb.conf
+        -Dtaskmanager.flink.memory.size=512m
+        --config.file.path /config/telemetry-extractor.conf
     scale: 1
