--- a/config/telemetry-extractor-comb.conf
+++ b/config/telemetry-extractor-comb.conf
@@ -1,12 +1,3 @@
-kafka {
-  broker-servers = "10.0.0.5:9092"
-  zookeeper = "10.0.0.5:2181"
-  producer {
-    max-request-size = 1572864
-    broker-servers = "10.0.0.5:9092"
-  }
-}
-
 job {
   env = "local"
   # set to false so that flink does not connect to state backend
@@ -24,12 +15,34 @@ job {
   }
 }
 
+kafka {
+  broker-servers = "10.0.0.5:9092"
+  zookeeper = "10.0.0.5:2181"
+  producer.broker-servers = "10.0.0.5:9092"
+  consumer.broker-servers = "10.0.0.5:9092"
+  producer.max-request-size = 5242880
+
+  input.topic = ${job.env}".telemetry.ingest"
+  output.success.topic = ${job.env}".telemetry.raw"
+  output.log.route.topic = ${job.env}".druid.events.log"
+  output.duplicate.topic = ${job.env}".telemetry.extractor.duplicate"
+  output.failed.topic = ${job.env}".telemetry.failed"
+  output.batch.failed.topic = ${job.env}".telemetry.extractor.failed"
+  output.assess.raw.topic = ${job.env}".telemetry.assess.raw"
+  event.max.size = "1048576" # Max is only 1MB
+  groupId = ${job.env}"-telemetry-extractor-group"
+
+}
+
+
+
 task {
   parallelism = 1
   consumer.parallelism = 1
   checkpointing.interval = 60000
   restart-strategy.attempts = 3
   restart-strategy.delay = 30000 # in milli-seconds
+  downstream.operators.parallelism = 1
 }
 
 redisdb.connection.timeout = 30000
@@ -37,11 +50,19 @@ redisdb.connection.timeout = 30000
 redis {
   host = 10.0.0.6
   port = 6379
+  database {
+    duplicationstore.id = 1
+    key.expiry.seconds = 3600
+  }
 }
 
 redis-meta {
   host = 10.0.0.6
   port = 6379
+  database {
+    contentstore.id = 5
+  }
+
 }
 
 # we'll see about these later
@@ -56,39 +77,6 @@ postgres {
 lms-cassandra {
   host = "localhost"
   port = "9042"
-}
-
-kafka {
-  input.topic = ${job.env}".telemetry.ingest"
-  output.success.topic = ${job.env}".telemetry.raw"
-  output.log.route.topic = ${job.env}".druid.events.log"
-  output.duplicate.topic = ${job.env}".telemetry.extractor.duplicate"
-  output.failed.topic = ${job.env}".telemetry.failed"
-  output.batch.failed.topic = ${job.env}".telemetry.extractor.failed"
-  output.assess.raw.topic = ${job.env}".telemetry.assess.raw"
-  event.max.size = "1048576" # Max is only 1MB
-  groupId = ${job.env}"-telemetry-extractor-group"
-  producer {
-    max-request-size = 5242880
-  }
-}
-
-task {
-  consumer.parallelism = 1
-  downstream.operators.parallelism = 1
-}
-
-redis {
-  database {
-    duplicationstore.id = 1
-    key.expiry.seconds = 3600
-  }
-}
-
-redis-meta {
-  database {
-    contentstore.id = 5
-  }
 }
 
 redact.events.list = ["ASSESS","RESPONSE"]
