--- a/config/telemetry-extractor-comb.conf
+++ b/config/telemetry-extractor-comb.conf
@@ -17,24 +17,26 @@ job {
 
 kafka {
   broker-servers = "10.0.0.5:9092"
-  zookeeper = "10.0.0.5:2181"
   producer.broker-servers = "10.0.0.5:9092"
   consumer.broker-servers = "10.0.0.5:9092"
-  producer.max-request-size = 5242880
+  zookeeper = "10.0.0.5:2181"
 
-  input.topic = ${job.env}".telemetry.ingest"
-  output.success.topic = ${job.env}".telemetry.raw"
-  output.log.route.topic = ${job.env}".druid.events.log"
-  output.duplicate.topic = ${job.env}".telemetry.extractor.duplicate"
-  output.failed.topic = ${job.env}".telemetry.failed"
-  output.batch.failed.topic = ${job.env}".telemetry.extractor.failed"
-  output.assess.raw.topic = ${job.env}".telemetry.assess.raw"
+  producer {
+      max-request-size = 5242880
+      batch.size = 98304
+      linger.ms = 10
+    }
+
+  input.topic = "local.telemetry.ingest"
+  output.success.topic = "local.telemetry.raw"
+  output.log.route.topic = "local.druid.events.log"
+  output.duplicate.topic = "local.telemetry.extractor.duplicate"
+  output.failed.topic = "local.telemetry.failed"
+  output.batch.failed.topic = "local.telemetry.extractor.failed"
+  output.assess.raw.topic = "local.telemetry.assess.raw"
   event.max.size = "1048576" # Max is only 1MB
-  groupId = ${job.env}"-telemetry-extractor-group"
-
+  groupId = "local-telemetry-extractor-group"
 }
-
-
 
 task {
   parallelism = 1
@@ -67,15 +69,15 @@ redis-meta {
 
 # we'll see about these later
 postgres {
-  host = localhost
-  port = 5430
+  host = 10.0.0.7
+  port = 5432
   maxConnections = 2
-  user = "postgres"
-  password = "postgres"
+  user = "analytics"
+  password = "password"
 }
 
 lms-cassandra {
-  host = "localhost"
+  host = "10.0.0.7"
   port = "9042"
 }
 
