--- a/config/telemetry-extractor-comb.conf
+++ b/config/telemetry-extractor-comb.conf
@@ -20,12 +20,12 @@ kafka {
   producer.broker-servers = "10.0.0.5:9092"
   consumer.broker-servers = "10.0.0.5:9092"
   zookeeper = "10.0.0.5:2181"
+  producer.batch.size = 98304
 
   producer {
-      max-request-size = 5242880
-      batch.size = 98304
-      linger.ms = 10
-    }
+    max-request-size = 5242880
+    linger.ms = 10
+  }
 
   input.topic = "local.telemetry.ingest"
   output.success.topic = "local.telemetry.raw"
