--- a/config/telemetry-extractor-comb.conf
+++ b/config/telemetry-extractor-comb.conf
@@ -42,6 +42,8 @@ task {
   parallelism = 1
   consumer.parallelism = 1
   checkpointing.interval = 60000
+  checkpointing.compressed = true
+  checkpointing.pause.between.seconds = 30000
   restart-strategy.attempts = 3
   restart-strategy.delay = 30000 # in milli-seconds
   downstream.operators.parallelism = 1
