--- a/config/telemetry-extractor-comb.conf
+++ b/config/telemetry-extractor-comb.conf
@@ -16,10 +16,10 @@ job {
 }
 
 kafka {
-  broker-servers = "10.0.0.5:9092"
-  producer.broker-servers = "10.0.0.5:9092"
-  consumer.broker-servers = "10.0.0.5:9092"
-  zookeeper = "10.0.0.5:2181"
+  broker-servers = "kafka:9092"
+  producer.broker-servers = "kafka:9092"
+  consumer.broker-servers = "kafka:9092"
+  zookeeper = "zookeeper:2181"
   producer.batch.size = 98304
 
   producer {
