--- a/config/telemetry-extractor-comb.conf
+++ b/config/telemetry-extractor-comb.conf
@@ -16,9 +16,9 @@ job {
 }
 
 kafka {
-  broker-servers = "kafka:9092"
-  producer.broker-servers = "kafka:9092"
-  consumer.broker-servers = "kafka:9092"
+  broker-servers = "localhost:9092"
+  producer.broker-servers = "localhost:9092"
+  consumer.broker-servers = "localhost:9092"
   zookeeper = "zookeeper:2182"
   producer.batch.size = 98304
 
