--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,26 +17,26 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
 
-#  jobmanager-te:
-#    build: .
-#    ports:
-#      - "8081:8081"
-#    command: >
-#        /opt/flink/bin/standalone-job.sh start-foreground
-#        --job-classname=org.sunbird.dp.extractor.task.TelemetryExtractorStreamTask
-#        -Djobmanager.rpc.address=jobmanager-te
-#        -Djobmanager.rpc.port=6123
-#        -Dparallelism.default=1
-#        -Dblob.server.port=6124
-#        -Dqueryable-state.server.ports=6125
-#        --config.file.path /config/telemetry-extractor-comb.conf
-#
-#  taskmanager-te:
-#    build: .
-#    depends_on:
-#      - jobmanager-te
-#    command: >
-#        /opt/flink/bin/taskmanager.sh start-foreground
-#        -Djobmanager.rpc.address=jobmanager-te
-#        -Dtaskmanager.rpc.port=6122
-#    scale: 1
+  jobmanager-te:
+    build: .
+    ports:
+      - "8081:8081"
+    command: >
+        /opt/flink/bin/standalone-job.sh start-foreground
+        --job-classname=org.sunbird.dp.extractor.task.TelemetryExtractorStreamTask
+        -Djobmanager.rpc.address=jobmanager-te
+        -Djobmanager.rpc.port=6123
+        -Dparallelism.default=1
+        -Dblob.server.port=6124
+        -Dqueryable-state.server.ports=6125
+        --config.file.path /config/telemetry-extractor-comb.conf
+
+  taskmanager-te:
+    build: .
+    depends_on:
+      - jobmanager-te
+    command: >
+        /opt/flink/bin/taskmanager.sh start-foreground
+        -Djobmanager.rpc.address=jobmanager-te
+        -Dtaskmanager.rpc.port=6122
+    scale: 1
