--- a/config/telemetry-extractor-comb.conf
+++ b/config/telemetry-extractor-comb.conf
@@ -1,5 +1,5 @@
 job {
-  env = "local"
+  env = "dp"
   # set to false so that flink does not connect to state backend
   enable.distributed.checkpointing = false
   statebackend {
@@ -16,10 +16,10 @@ job {
 }
 
 kafka {
-  broker-servers = "kafka:9094"
-  producer.broker-servers = "kafka:9094"
-  consumer.broker-servers = "kafka:9094"
-  zookeeper = "zookeeper:2182"
+  broker-servers = "10.0.0.5:9092"
+  producer.broker-servers = "10.0.0.5:9092"
+  consumer.broker-servers = "10.0.0.5:9092"
+  zookeeper = "10.0.0.5:2181"
   producer.batch.size = 98304
 
   producer {
