--- a/config/telemetry-extractor-comb.conf
+++ b/config/telemetry-extractor-comb.conf
@@ -27,13 +27,13 @@ kafka {
     linger.ms = 10
   }
 
-  input.topic = "local.telemetry.ingest"
-  output.success.topic = "local.telemetry.raw"
-  output.log.route.topic = "local.druid.events.log"
-  output.duplicate.topic = "local.telemetry.extractor.duplicate"
-  output.failed.topic = "local.telemetry.failed"
+  input.topic = "dp.telemetry.ingest"
+  output.success.topic = "dp.telemetry.raw"
+  output.log.route.topic = "dp.druid.events.log"
+  output.duplicate.topic = "dp.telemetry.extractor.duplicate"
+  output.failed.topic = "dp.telemetry.failed"
   output.batch.failed.topic = "local.telemetry.extractor.failed"
-  output.assess.raw.topic = "local.telemetry.assess.raw"
+  output.assess.raw.topic = "dp.telemetry.assess.raw"
   event.max.size = "1048576" # Max is only 1MB
   groupId = "local-telemetry-extractor-group"
 }
