--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,7 @@ services:
         -Dblob.server.port=6124
         -Dqueryable-state.server.ports=6125
         -Djobmanager.memory.process.size=256m
+        -Djobmanager.memory.jvm-metaspace.size=224mb
         -Djobmanager.memory.jvm-overhead.min=16m
         -Djobmanager.memory.jvm-overhead.max=32m
         -Djobmanager.memory.jvm-overhead.fraction=0.1
@@ -29,6 +30,7 @@ services:
         -Djobmanager.rpc.address=jobmanager-te
         -Dtaskmanager.rpc.port=6122
         -Dtaskmanager.memory.process.size=256m
+        -Dtaskmanager.memory.jvm-metaspace.size=224mb
         -Dtaskmanager.memory.jvm-overhead.min=16m
         -Dtaskmanager.memory.jvm-overhead.max=32m
         -Dtaskmanager.memory.jvm-overhead.fraction=0.1
