--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,9 @@ services:
         -Dblob.server.port=6124
         -Dqueryable-state.server.ports=6125
         -Djobmanager.memory.process.size=256m
+        -Djobmanager.memory.flink.size=192mb
+        -Djobmanager.memory.heap.size=32m
+        -Djobmanager.memory.off-heap.size=160m
         -Djobmanager.memory.jvm-metaspace.size=32mb
         -Djobmanager.memory.jvm-overhead.min=16m
         -Djobmanager.memory.jvm-overhead.max=32m
@@ -30,6 +33,9 @@ services:
         -Djobmanager.rpc.address=jobmanager-te
         -Dtaskmanager.rpc.port=6122
         -Dtaskmanager.memory.process.size=256m
+        -Dtaskmanager.memory.flink.size=192mb
+        -Dtaskmanager.memory.heap.size=32m
+        -Dtaskmanager.memory.off-heap.size=160m
         -Dtaskmanager.memory.jvm-metaspace.size=32mb
         -Dtaskmanager.memory.jvm-overhead.min=16m
         -Dtaskmanager.memory.jvm-overhead.max=32m
